# gnucash-patcher-nodejs-addon

./: .gitignore  CMakeLists.txt  README  index.js  package.json
entry/: CMakeLists.txt  main.cpp  node-addon.cpp
entry/test/: test-node-addon.js
pat/: CMakeLists.txt  book-patcher.cpp  book-patcher.hpp  files.cpp  sess.cpp  sess.hpp
pat/test/: CMakeLists.txt  test-book-patcher.cpp  test-utils.cpp  test-utils.hpp
src/: CMakeLists.txt  common.h  files.hpp  main.cpp  sess.cpp  sess.hpp
src/test/: CMakeLists.txt  test-book-patcher.cpp
test-nodejs/: _sample_data.json  example_zero.gnucash  test-node-addon.js
